nacl-outbound-ephemeral-ports/KonStone.template.json
{
  "Resources": {
    "MyVpcF9F0CA6F": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.13.0.0/21",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "KonStone/MyVpc"
          },
          {
            "Key": "Owner",
            "Value": "KonStone"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/Resource"
      }
    },
    "MyVpcpubSubnetSubnet1SubnetD4A9FCBD": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.13.0.0/24",
        "VpcId": {
          "Ref": "MyVpcF9F0CA6F"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "KonStone/MyVpc/pubSubnetSubnet1"
          },
          {
            "Key": "Owner",
            "Value": "KonStone"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pubSubnet"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/pubSubnetSubnet1/Subnet"
      }
    },
    "MyVpcpubSubnetSubnet1RouteTable0125BBEF": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVpcF9F0CA6F"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "KonStone/MyVpc/pubSubnetSubnet1"
          },
          {
            "Key": "Owner",
            "Value": "KonStone"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/pubSubnetSubnet1/RouteTable"
      }
    },
    "MyVpcpubSubnetSubnet1RouteTableAssociation01A3DB03": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyVpcpubSubnetSubnet1RouteTable0125BBEF"
        },
        "SubnetId": {
          "Ref": "MyVpcpubSubnetSubnet1SubnetD4A9FCBD"
        }
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/pubSubnetSubnet1/RouteTableAssociation"
      }
    },
    "MyVpcpubSubnetSubnet1DefaultRoute40937DC3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyVpcpubSubnetSubnet1RouteTable0125BBEF"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MyVpcIGW5C4A4F63"
        }
      },
      "DependsOn": [
        "MyVpcVPCGW488ACE0D"
      ],
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/pubSubnetSubnet1/DefaultRoute"
      }
    },
    "MyVpcpubSubnetSubnet2SubnetF7FBA7DE": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.13.1.0/24",
        "VpcId": {
          "Ref": "MyVpcF9F0CA6F"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "KonStone/MyVpc/pubSubnetSubnet2"
          },
          {
            "Key": "Owner",
            "Value": "KonStone"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "pubSubnet"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/pubSubnetSubnet2/Subnet"
      }
    },
    "MyVpcpubSubnetSubnet2RouteTableB9B9A9FF": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "MyVpcF9F0CA6F"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "KonStone/MyVpc/pubSubnetSubnet2"
          },
          {
            "Key": "Owner",
            "Value": "KonStone"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/pubSubnetSubnet2/RouteTable"
      }
    },
    "MyVpcpubSubnetSubnet2RouteTableAssociationAA39293B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyVpcpubSubnetSubnet2RouteTableB9B9A9FF"
        },
        "SubnetId": {
          "Ref": "MyVpcpubSubnetSubnet2SubnetF7FBA7DE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/pubSubnetSubnet2/RouteTableAssociation"
      }
    },
    "MyVpcpubSubnetSubnet2DefaultRouteE761BA57": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "MyVpcpubSubnetSubnet2RouteTableB9B9A9FF"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "MyVpcIGW5C4A4F63"
        }
      },
      "DependsOn": [
        "MyVpcVPCGW488ACE0D"
      ],
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/pubSubnetSubnet2/DefaultRoute"
      }
    },
    "MyVpcIGW5C4A4F63": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "KonStone/MyVpc"
          },
          {
            "Key": "Owner",
            "Value": "KonStone"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/IGW"
      }
    },
    "MyVpcVPCGW488ACE0D": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "MyVpcF9F0CA6F"
        },
        "InternetGatewayId": {
          "Ref": "MyVpcIGW5C4A4F63"
        }
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/MyVpc/VPCGW"
      }
    },
    "websecgrp8CE62532": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow internet access from the world",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow internet access from the world.",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "MyVpcF9F0CA6F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/web_sec_grp/Resource"
      }
    },
    "webworkingnacl574176FA": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "MyVpcF9F0CA6F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/web_working_nacl/Resource"
      }
    },
    "webworkingnaclworkingnaclinrule120AA8EE186": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "webworkingnacl574176FA"
        },
        "Protocol": 6,
        "RuleAction": "allow",
        "RuleNumber": 120,
        "CidrBlock": "0.0.0.0/0",
        "Egress": false,
        "PortRange": {
          "From": 80,
          "To": 80
        }
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/web_working_nacl/working_nacl_in_rule_120/Resource"
      }
    },
    "webworkingnaclworkingnacloutrule12047C2FC2E": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "webworkingnacl574176FA"
        },
        "Protocol": 6,
        "RuleAction": "allow",
        "RuleNumber": 120,
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "PortRange": {
          "From": 80,
          "To": 80
        }
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/web_working_nacl/working_nacl_out_rule_120/Resource"
      }
    },
    "webinstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
        },
        "InstanceType": "t2.micro",
        "Monitoring": false,
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": "0",
            "GroupSet": [
              {
                "Fn::GetAtt": [
                  "websecgrp8CE62532",
                  "GroupId"
                ]
              }
            ],
            "SubnetId": {
              "Ref": "MyVpcpubSubnetSubnet1SubnetD4A9FCBD"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "KonStone-Web-instance"
          },
          {
            "Key": "Owner",
            "Value": "KonStone"
          }
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash\n#!/bin/bash -xe\n\n# Lets log everything to console for being lazy (not recommended)\nexec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1\n\n#install httpd\nyum install httpd ec2-instance-connect -y\n\n#enable and start httpd\nsystemctl enable httpd\nsystemctl start httpd\necho \"<html><head><title> Mystikal World</title></head>\" >  /var/www/html/index.html\necho \"<body><br/><br/><br/><br/><br/><hr/>\" >>  /var/www/html/index.ht [...]
        }
      },
      "Metadata": {
        "aws:cdk:path": "KonStone/web-instance"
      }
    }
  },
  "Parameters": {
    "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
      "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
    }
  }
}
